5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1834_1276.log
== TEST (2019-06-30 17:47:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= array(eval(input("AAAa:")))

horas= shape(ent)[0]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[i,:])
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 17:57:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[0]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[i,:])

for i in range(total):
	if(total[i]==total(max)):
		a+=1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 17:57:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[0]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[i,:])

for i in range(size(total)):
	if(total[i]==total(max)):
		a+=1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:12:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[i,:])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:14:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:i,])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:15:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:22:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(total):
	if(total[i] >= max(total):
		a+=1
	print(a)
-- ERROR:
File "XXXX", line 13
    if(total[i] >= max(total):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:22:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(total):
	if(total[i] >= max(total)):
		a+=1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:22:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(size(total)):
	if(total[i] >= max(total)):
		a+=1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:22:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(size(total)):
	if(total[i] >= max(total)):
		a+=1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:23:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(size(total)):
	if(total[i] >= max(total)):
		a+=1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:25:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(total):
	if(total[i] >= max(total)):
		a+=1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:26:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(horas):
	if(total[i] >= max(total)):
		print(a+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:28:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
i=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(horas):
	if(total[i] >= max(total)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 18:28:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
i=0
ent= array(eval(input("AAAa:")))

horas= shape(ent)[1]
total= zeros(horas, dtype=int)			 
		 
for i in range(horas):
	total[i]= sum(ent[:,i])

for i in range(horas):
	if(total[i] >= max(total)):
		print(i+1)
-- EXECUTION TIME:
1.12955
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
